Agregado el contenido adicional y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,12 @@
                     cosas increibles que se pueden 
                     hacer con ramas
                 </p>
+                <p>Aqui va el parrafo de lo
+                    mas profundo de su corazon, la verdad 
+                    deberia ir mucho texto aqui asi que
+                    solo escribire esto para 
+                    explicarlo
+                </p>
             </div>
         </div>
     </body>
