Agregue suscripcion, cabecera maestra y puse azul todo

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         
         <div id="container">
             <div id = "cabecera">
-                Hyperblog <span id="tagline">Tu blog de confianza</span>
+                Hyperblog <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id= "post">
                 <h1>Este es el titulo atractivo
@@ -23,6 +23,9 @@
                     deberia ir mucho texto aqui asi que
                     solo escribire esto para 
                     explicarlo
+                </p>
+                <p>Suscribete y dale like
+                    
                 </p>
             </div>
         </div>
