--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,9 @@
                     
                 </p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi corazon
+            </div>
         </div>
     </body>
 
