--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 Hyperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id= "post">
-                <h1>Este es el titulo atractivo
+                <h1>Este es el título atractivo
                     e interesante del post
                 </h1>
                 <p>Y este es el parrafo de inicio
@@ -19,8 +19,8 @@
                     cosas increibles que se pueden 
                     hacer con ramas
                 </p>
-                <p>Aqui va el parrafo de lo
-                    mas profundo de su corazon, la verdad 
+                <p>Aquí va el parrafo de lo
+                    mas profundo de su crazón, la verdad 
                     deberia ir mucho texto aqui asi que
                     solo escribire esto para 
                     explicarlo
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi corazon
+                Hecho con amor en Platzi corazón
             </div>
         </div>
     </body>
