Cambio a codigo html en lugar de tildes directas

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,17 +11,17 @@
                 Hyperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id= "post">
-                <h1>Este es el título atractivo
+                <h1>Este es el t&iacute;tulo atractivo
                     e interesante del post
                 </h1>
-                <p>Y este es el parrafo de inicio
+                <p>Y este es el p&aacute;rrafo de inicio
                     donde vamos a explicar las 
                     cosas increibles que se pueden 
                     hacer con ramas
                 </p>
                 <p>Aquí va el parrafo de lo
-                    mas profundo de su crazón, la verdad 
-                    deberia ir mucho texto aqui asi que
+                    mas profundo de su craz&oacute;n, la verdad 
+                    deber&iacute;a ir mucho texto aqui asi que
                     solo escribire esto para 
                     explicarlo
                 </p>
@@ -30,7 +30,7 @@
                 </p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi corazón
+                Hecho con amor en Platzi coraz&oacute;n
             </div>
         </div>
     </body>
