--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
                 <h1>Este es el t&iacute;tulo atractivo
                     e interesante del post
                 </h1>
+                <h1>Deberia haber hechos cambios gramaticales</h1>
                 <p>Y este es el p&aacute;rrafo de inicio
                     donde vamos a explicar las 
                     cosas increibles que se pueden 
